--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <h1>People entered: </h1>
-        <h2 id="count-el">0</h2>
-        <button id="increment-btn" onclick="increment()">increment</button>
-        <button id="save-btn" onclick="save()">save</button>
-        <p id="save-el">Previous entries: </p>
-        <script src="index.js"></script>
+        <div class="container">
+            <h1>Total avocados: </h1>
+            <h2 id="count-el">0</h2>
+            <button id="increment-btn" onclick="increment()">increment</button>
+            <button id="save-btn" onclick="save()">save</button>
+            <p id="save-el">Previous entries: </p>
+        </div>
+    <script src="index.js"></script>
+  
     </body>
 </html>
